Clean generation run